--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "devDependencies": {
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.31.0",
     "husky": "^7.0.1"
   },
   "config": {
@@ -16,5 +17,9 @@
     "cz-conventional-changelog@3.3.0": {
       "unplugged": true
     }
+  },
+  "dependencies": {
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.5"
   }
 }
