--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
   "name": "eatgma-backend",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.31.0",
-    "husky": "^7.0.1"
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-node": "^0.3.4",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^3.4.0",
+    "husky": "^7.0.1",
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.5"
   },
   "config": {
     "commitizen": {
@@ -17,9 +26,5 @@
     "cz-conventional-changelog@3.3.0": {
       "unplugged": true
     }
-  },
-  "dependencies": {
-    "prettier": "^2.3.2",
-    "typescript": "^4.3.5"
   }
 }
