--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@envelop/core": "^1.0.1",
+    "@graphql-tools/load-files": "^6.3.2",
+    "@graphql-tools/merge": "^6.2.14",
+    "@graphql-tools/schema": "^7.1.5",
     "graphql": "^15.5.1",
     "graphql-helix": "^1.6.1"
   },
@@ -21,7 +24,7 @@
     }
   },
   "devDependencies": {
-    "@graphql-tools/schema": "^7.1.5",
+    "@types/node": "^16.4.3",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
     "commitizen": "^4.2.4",
