--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@graphql-tools/load-files": "^6.3.2",
     "@graphql-tools/merge": "^6.2.14",
     "@graphql-tools/schema": "^7.1.5",
+    "@graphql-tools/utils": "^7.10.0",
     "graphql": "^15.5.1",
     "graphql-helix": "^1.6.1"
   },
