--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "eatgma-backend",
   "scripts": {
-    "dev": "jiti src/server.ts"
+    "start": "tsc --watch",
+    "dev": "node dist/server.js"
   },
   "config": {
     "commitizen": {
@@ -41,7 +42,6 @@
     "fastify": "^3.19.2",
     "fastify-cors": "^6.0.2",
     "husky": "^7.0.1",
-    "jiti": "^1.11.0",
     "prettier": "^2.3.2",
     "typescript": "^4.3.5"
   }
